dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__api.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
┌ lichess budget ────────────────────────────────────────────┐
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
└────────────────────────────────────────────────────────────┘
