dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__bots.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
┌ bots ──────────────────────────────────────────────────────┐
│1 SumoFish        no account  0 playing                     │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
└────────────────────────────────────────────────────────────┘
