dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__games.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
assertion_line: 100
expression: as_text(&buf)
---

