dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__header.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
 SUMOFISH  live v1 ○ lichess no account
──────────────────────────────────────────────────────────────
