dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__machine.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
┌ machine ───────────────────────────────────────────────────┐
│no GPU reading                                              │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
└────────────────────────────────────────────────────────────┘
