dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__empty__mind.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
┌ engine search ─────────────────────────────────────────────┐
│                                                            │
│waiting for the engine to move                              │
│logs/engine.jsonl                                           │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
│                                                            │
└────────────────────────────────────────────────────────────┘
